<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">arashtab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="drawer_open">Darwer is open</string>
      <string name="drawer_close">Drawer is closed</string>
    <string-array name="planets">
        <item >mars</item>
        <item >jupiter</item>
        <item >earth</item>
    </string-array>
    <string-array name="menu">
        <item >Home</item>
        <item >News</item>
        <item >Calenders</item>
        
        <item >Staff</item><item>Contact Us</item>
        <item >About Us</item>
    </string-array>
<string-array name="stars">
        <item >sun</item>
        <item >sun2</item>
        <item >mon</item>
    </string-array>
        <string name="SportKntu">Sport.Kntu</string>
        <string name="oloadr">خيابان شريعتي بالاتر از پل سيد خندان كوچه مجتبايي كوچه كاويان</string>
        <string name="sanadr">ميدان ونك خيابان ملاصدرا خيابان پرديس</string>
        <string name="baradr">خيابان شريعتي پل سيد خندان جنب پست و مخابرات</string>
        <string name="adr">آدرس</string>
        <string name="dan">دانشكده</string>
        <string name="shm">شماره تماس</string>
        <string name="olodan">علوم</string>
        <string name="bardan">برق</string>
        <string name="sandan">مكانيك و صنايع</string>
        <string name="oloshm">۲۲۸۵۰۲۷۵</string>
        <string name="barshm">        </string>
        <string name="sanshm">۸۴۰۶۳۳۰۸-۸۴۰۶۳۲۶۳ </string>
        <string name="tam">تماس با ما</string>
        <string name="welcome">" نرم افزار اداره تربیت بدنی دانشگاه صنعتی خواجه نصیر الدین طوسی "</string>
        <string name="newsfarsi">اخبار و اطلاعیه های اداره تربیت بدنی</string>
        <string name="zamanb">زمانبندي استفاده آزاد از سالن بدنسازي پرديس علوم</string>
        <string name="fotsal1">هفته ششم ليگ فوتسال كاركنان</string>
        <string name="fotsal2">هفته پنجم ليگ فوتسال كاركنان</string>
        <string-array name="calenders">
            <item >کلاس‌های فوق برنامه و تمرینات تیم‌</item>
            <item >ورزش هیئت علمی‌</item>
            <item >ورزش کارکنان</item>
            <item >ورزش خوابگاه ها</item>
        </string-array>
        <string-array name="daneshkadeha">
            <item >دانشكده علوم</item>
            <item >هوافضا</item>
            <item >دانشكده هاي مكانيك وصنايع</item>
            <item >دانشكده برق</item>
            <item >سازمان مركزي</item>
            <item >دانشكده هاي عمران ونقشه برداري</item>
        </string-array>
        <string-array name="daneshkadehafogh">
            <item >دانشكده علوم</item>
            <item >هوافضا</item>
            <item >دانشكده هاي مكانيك وصنايع</item>
            <item >دانشكده برق</item>
            <item >دانشكده هاي عمران ونقشه برداري</item>
        </string-array>
        <string-array name="khabghahha">
            <item >ورزش خوابگاه هاي دختران</item>
            <item >ورزش خوابگاه هاي پسران</item>
        </string-array>
        <string name="calender">برنامه‌های ورزشی دانشگاه</string>
        <string name="honavar"> آقاي دكتر افشار هنرور داراي مدرك دكتري مديريت ورزش از دانشگاه تربيت مدرس، از سال ۱۳۸۸ به عضويت هيات علمي دانشگاه صنعتي خواجه نصيرالدين طوسي در آمدند. ايشان در مقطع كارشناسي و كارشناسي ارشد نيز در رشته تربيت بدني تحصيل نموده اند. حوزه تخصصي مطالعاتي ايشان گردشگري ورزشي مي باشد اما در زمينه هايي مانند مديريت و برنامه ريزي، نظارت و ارزيابي عملكرد، برنامه ريزي راهبردي و بازاريابي نيز داراي سابقه مطالعاتي و تدريس مي باشند. تاكنون در  ۱۴ طرح پژوهشي به عنوان همكار يا مجري به سفارش سازمان هاي مختلف مشاركت داشته اند و از همكاران اصلي در تدوين طرح جامع ورزش كشور در سال ۱۳۸۰ بودند. ايشان داراي ۳۰ مقاله چاپ يا پذيرفته شده در نشريات علمي و پژوهشي و ISI بوده و در ۳۸ همايش علمي داخلي و خارجي ارائه مقاله داشته اند.</string>
        <string name="moarefimodir">معرفي مدير تربيت بدني</string>
        <string name="welcome2">به نرم افزار اداره تربیت بدنی دانشگاه صنعتی خواجه نصیرالدین طوسی خوش آمدید.
امید است این نرم افزار بتواند در جهت بهره وری بیشتر به منظور استفاده از فضاهای ورزشی دانشگاه و اطلاع از برنامه ها و فعالیت های تربیت بدنی مفید واقع گردد.
        </string>
        <string name="omrdan">عمران و نقشه برداري</string>
        <string name="havdan">هوا فضا</string>
        <string name="omradr">خيابان ولي عصر تقاطع ميرداماد روبروي ساختمان اسكان</string>
        <string name="havadr">فلكه چهارم تهرانپارس وفادار شرقي دو راهي رهبر</string>
        <string name="shmomr">  </string>
        <string name="shmhav">۷۳۰۶۴۳۷۰</string>
        <string name="moarefi">برنامه اداره تربیت بدنی دانشگاه صنعتی‌ خواجه نصیرالدین طوسی‌ در سال ۱۳۹۴ توسط آرش کیهانی و سعید غلام حسینی طراحی و ساخته شد.مراحل مختلف طراحی تحت نظارت و پیشنهاد جناب آقای دکتر افشار هنرور  مدیریت اداره تربیت بدنی دانشگاه قرار داشت .امید است این نرم افزار بتواند در جهت بهره وری بیشتر به منظور استفاده از فضاهای ورزشی دانشگاه و اطلاع از برنامه ها و فعالیت های تربیت بدنی مفید واقع گردد.</string>
        <string name="imolom">سالن چند منظوره پرديس علوم</string>
        <string name="imhava">سالن چند منظوره دانشكده هوافضا</string>
        <string name="immec">سالن ورزش دانشكده هاي مكانيك و صنايع</string>
        <string name="imcham">زمين چمن دانشكده هوافضا</string>
        <string name="imten">سالن تنيس روي ميز دانشكده هاي مكانيك و صنايع</string>
        <string name="imomr">زمين چمن دانشكده عمران</string>
        <string name="imcup">كاپ هاي قهرماني مسابقات ورزشي</string>
        <string name="modiriat"> آقاي دكتر افشار هنرور داراي مدرك دكتري مديريت ورزش از دانشگاه تربيت مدرس، از سال ۱۳۸۸ به عضويت هيات علمي دانشگاه صنعتي خواجه نصيرالدين طوسي در آمدند. ايشان در مقطع كارشناسي و كارشناسي ارشد نيز در رشته تربيت بدني تحصيل نموده اند. حوزه تخصصي مطالعاتي ايشان گردشگري ورزشي مي باشد اما در زمينه هايي مانند مديريت و برنامه ريزي، نظارت و ارزيابي عملكرد، برنامه ريزي راهبردي و بازاريابي نيز داراي سابقه مطالعاتي و تدريس مي باشند. تاكنون در  ۱۴ طرح پژوهشي به عنوان همكار يا مجري به سفارش سازمان هاي مختلف مشاركت داشته اند و از همكاران اصلي در تدوين طرح جامع ورزش كشور در سال ۱۳۸۰ بودند. ايشان داراي ۳۰ مقاله چاپ يا پذيرفته شده در نشريات علمي و پژوهشي و ISI بوده و در ۳۸ همايش علمي داخلي و خارجي ارائه مقاله داشته اند.</string>
        <string name="moarefimo">معرفي مدير تربيت بدني</string>
        <string name="sarparastan">مسئولين و سرپرستان تيم هاي مختلف ورزشي</string>
        <string name="mirza">آقاي حسين حاجي ميرزا :
\nبسكتبال، فوتسال، كشتي \n
شماره تماس : ۲۳۰۶۴۳۰۱\n
آقاي حسن محمودي :
\n شنا، تنيس روي ميز، دو و ميداني \n
شماره تماس : ۸۴۰۶۳۲۶۳ و ۸۴۰۶۳۳۰۸ \n
آقاي عليرضا راهپيما :
\n تكواندو، كاراته، جودو، بدمينتون، كوهنوردي، بدنسازي، كونگ فو، واليبال \n
شماره تماس : ۲۳۰۶۴۳۰۱ \n
خانم ندا سروش راد :
\n تنيس روي ميز، واليبال، سپك تاكرا، شطرنج، فوتسال، كبدي \n
شماره تماس : ۲۳۰۶۴۲۹۵ \n
خانم فاطمه موحد منش :
\n كاراته، بدمينتون، تكواندو، دو و ميداني \n
شماره تماس : ۷۳۰۶۴۳۷۰ \n
خانم گلنما فقير :
\n بسكتبال، شنا، كوهنوردي، يوگا، ايروبيك \n
شماره تماس : ۲۳۰۶۴۴۱۵ \n
            
            
</string>
        <string name="karkonjadval">"اسامي كاركنان تربيت بدني دانشكده ها   "</string>
    
</resources>
